@@ -1,3 +1,7 @@
+2011-10-10: fizzbuzz.py
+
+	* Python で fizzbuzz
+
 2011-10-02: solr-search.html,solr-search.js
 	* Solr の簡易 HTML コンソール。
 
